--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -2,8 +2,11 @@
 @use "../../styles/abstract/mixins" as *;
 
 .container {
+  position: fixed;
+  top: 0;
   padding: 0 4rem;
   width: 100%;
   height: 6rem;
+  z-index: 100;
   @include flexRowSB;
 }
