--- a/src/components/home/PostHeader.module.scss
+++ b/src/components/home/PostHeader.module.scss
@@ -56,6 +56,7 @@
           font-weight: 700;
           letter-spacing: 0.02rem;
           cursor: pointer;
+          transition: all 0.3s ease;
         }
       }
 
