--- a/src/pages/SingleUser.module.scss
+++ b/src/pages/SingleUser.module.scss
@@ -2,9 +2,10 @@
 @use "../styles/abstract/mixins" as *;
 
 .container {
-  padding: 2.4rem 0;
+  padding: 0 0 2.4rem 0;
   width: 100%;
   flex: 1;
   @include flexRow;
   align-items: start;
+  margin-top: 6rem;
 }
