--- a/src/styles/abstract/_colors.scss
+++ b/src/styles/abstract/_colors.scss
@@ -11,6 +11,15 @@ $primary-color-hover-light: #e2c628e5;
 $primary-color-hover-dark: #e2c628e5;
 $primary-c-color-hover-light: #131313e5;
 $primary-c-color-hover-dark: #131313e5;
+// SECONDARY BG&C
+$secondary-color-light: #ebd03be5;
+$secondary-c-color-light: #242424e5;
+$secondary-color-dark: #ebd03be5;
+$secondary-c-color-dark: #242424e5;
+$secondary-color-hover-light: #e2c628e5;
+$secondary-color-hover-dark: #e2c628e5;
+$secondary-c-color-hover-light: #131313e5;
+$secondary-c-color-hover-dark: #131313e5;
 
 // TEXT COLOR
 $primary-text-color-light: #252525;
@@ -45,6 +54,7 @@ $auth-btn-bg-hover-color-dark: #cca539;
 
 // LIKED
 $liked-color: #f30f0f;
+$alert-circle: #f30f0f;
 
 // BORDER
 $border-color-light: #e7bd48;
