--- a/src/components/home/CreateComment.module.scss
+++ b/src/components/home/CreateComment.module.scss
@@ -19,6 +19,8 @@
     flex: 1;
     align-self: stretch;
     min-height: 6rem;
+    max-width: 100rem;
+    z-index: 1;
   }
   textarea:focus {
     outline: none;
