added notifications. finalized likes, comments and friend requests

--- a/src/styles/abstract/_colors.scss
+++ b/src/styles/abstract/_colors.scss
@@ -33,6 +33,12 @@ $primary-header-bg-color-dark: #272729;
 $primary-post-bg-color-light: #f7f7f7;
 $primary-post-bg-color-dark: #272729;
 
+// NOTIFICATION BACKGROUND COLOR
+$primary-notification-bg-color-light: #f7f7f7;
+$primary-notification-bg-color-dark: #272729;
+$primary-notification-hover-bg-color-light: #ececec;
+$primary-notification-hover-bg-color-dark: #49494d;
+
 // DATE COLOR
 $primary-date-color-light: #777777;
 $primary-date-color-dark: #a3a3a3;
@@ -59,6 +65,9 @@ $alert-circle: #f30f0f;
 // BORDER
 $border-color-light: #e7bd48;
 $border-color-dark: #e7bd48;
+
+// HIGHLIGHTED
+$highlighted-dark: #56d423;
 
 $opacity-10: rgba(0, 0, 0, 0.08);
 
