--- a/src/components/auth/SingleAuthInput.module.scss
+++ b/src/components/auth/SingleAuthInput.module.scss
@@ -6,6 +6,13 @@
   @include flexColumn;
   align-items: flex-start;
 
+  label {
+    font-size: 1.4rem;
+    padding: 0.2rem 1rem;
+    border-radius: 4rem;
+    margin-bottom: 0.4rem;
+  }
+
   input {
     width: 100%;
     border: none;
