--- a/src/components/home/CreateComment.module.scss
+++ b/src/components/home/CreateComment.module.scss
@@ -20,6 +20,9 @@
     align-self: stretch;
     min-height: 6rem;
     max-width: 100rem;
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     z-index: 1;
   }
   textarea:focus {
