--- a/src/components/home/CreatePostForm.module.scss
+++ b/src/components/home/CreatePostForm.module.scss
@@ -20,6 +20,9 @@
       border-radius: 1rem;
       padding: 1rem;
       font-size: 1.6rem;
+      font-family: "Inter", serif;
+      font-optical-sizing: auto;
+      font-style: normal;
     }
 
     .image__box {
