--- a/src/components/friends/FriendsOverlay.module.scss
+++ b/src/components/friends/FriendsOverlay.module.scss
@@ -9,6 +9,7 @@
   height: calc(100vh - 6rem);
   display: grid;
   grid-template-columns: 1fr 35rem;
+  // grid-template-columns: 1fr 26rem;
   align-items: flex-end;
   z-index: 10;
 
